@@ -25,54 +25,35 @@ Vue 3 + Element Plus 管理后台系统，前端使用夏日海滩风主题（�
 - ✓ 消息管理（查询、详情、轨迹追踪）— v1.3
 - ✓ 监控面板（集群概览、Broker状态、堆积量）— v1.3
 
-## Current Milestone: v1.4 后端 Maven 到 Gradle 迁移 + Spring Boot 4.1.0-RC1 升级
+- ✓ Maven → Gradle 完整迁移（Gradle 9.5 + JDK 26）— v1.4
+- ✓ Spring Boot 4.0.5 → 4.1.0-RC1 升级 — v1.4
+- ✓ 所有依赖升级到最新兼容版本 — v1.4
+- ✓ 构建脚本优化（Kotlin DSL）— v1.4
+- ✓ 修复 Gradle 测试中文路径 ClassNotFoundException — v1.4
+- ✓ 修复 pom.xml 中硬编码的数据库凭证 — v1.4
 
-**Goal:** 将后端从 Maven 迁移到 Gradle，同时升级 Spring Boot 到 4.1.0-RC1 并更新所有兼容依赖
+## Current Milestone: v1.5 前后端代码重构与目录整理
+
+**Goal:** 重构前后端代码结构，整理代码和配置文件目录，消除技术债务
 
 **Target features:**
-- Maven → Gradle 完整迁移（Gradle 9.4 + JDK 26）
-- Spring Boot 4.0.5 → 4.1.0-RC1 升级
-- 所有依赖升级到与 Spring Boot 4.1 兼容的最新版本
-- 构建脚本优化（Groovy DSL）
-- 保持现有功能完全正常工作
-- 修复 pom.xml 中硬编码的数据库凭证
-
-### Technical Notes (from research)
-
-**版本兼容性矩阵：**
-
-| 依赖 | 当前版本 | 升级目标 | 证据 |
-|------|----------|----------|------|
-| Spring Boot | 4.0.5 | 4.1.0-RC1 | [Release Notes](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-4.1.0-RC1-Release-Notes) |
-| Gradle Plugin | - | 4.1.0-RC1 | [Gradle Plugin Portal](https://plugins.gradle.org/plugin/org.springframework.boot) |
-| MyBatis-Plus | 3.5.16 | 3.5.16 + boot4-starter | [v3.5.16](https://github.com/baomidou/mybatis-plus/releases/tag/v3.5.16) |
-| Flyway | 4.0.6 | 12.x (12.4.0) | [Issue #50079](https://github.com/spring-projects/spring-boot/issues/50079) |
-| RocketMQ spring-starter | 2.3.5 | 2.3.5 | [v2.3.5](https://github.com/apache/rocketmq-spring/releases/tag/rocketmq-spring-all-2.3.5) |
-| Redisson | 4.3.1 | 4.2.0 | [v4.2.0](https://github.com/redisson/redisson/releases/tag/redisson-4.2.0) |
-| JJWT | 0.13.0 | 0.13.0 | [v0.13.0](https://github.com/jwtk/jjwt/releases/tag/0.13.0) |
-| MySQL Connector | 9.6.0 | 9.7.0 | [v9.7.0](https://dev.mysql.com/doc/relnotes/connector-j/en/news-9-7-0.html) |
-| ZSTD | 1.5.7-7 | 1.5.7-7 | [tags](https://github.com/luben/zstd-jni/tags) |
-
-**Breaking Changes 注意事项：**
-- `ReactorClientHttpRequestFactoryBuilder` 默认值变更（需检查 HTTP 客户端配置）
-- `management.httpexchanges.recording.include` 默认值变更
-- Java 最低要求 17+（部分特性需要 21+）
-
-**特殊 Maven 配置需翻译：**
-- `--enable-preview` compiler flag → `options.compilerArgs += "--enable-preview"`
-- `annotationProcessorPaths` → Gradle `annotationProcessor` 配置
-- Spring AOP 3.5.13 版本覆盖
-- `spring-boot-maven-plugin` 的 Lombok exclude
+- 后端代码包结构整理（controller/service/mapper/entity 等目录合理化）
+- 配置文件目录整理（application.yaml 拆分、统一配置管理）
+- 前端代码目录结构优化（views/api/router/store 分类整理）
+- 清理无用代码、冗余依赖
+- 代码风格统一、命名规范对齐
 
 ### Previous Milestone
 
-**v1.3 RocketMQ 管理功能 — ✅ 已完成 (2026-04-29)**
+**v1.4 Maven→Gradle + Spring Boot 4.1 升级 — ✅ 已完成 (2026-05-06)**
 
 **Delivered:**
-- Topic 管理：创建、删除、配置查看
-- Consumer Group 管理：消费进度、状态查看、位点重置
-- 消息管理：查看消息内容、轨迹追踪
-- 监控面板：集群概览、Broker状态、Topic堆积量
+- Maven → Gradle 完整迁移（Gradle 9.5 + JDK 26）
+- Spring Boot 4.0.5 → 4.1.0-RC1 升级
+- 所有依赖升级到最新兼容版本
+- 修复 Gradle 测试中文路径 ClassNotFoundException（file.encoding=GBK）
+- 修复 pom.xml 中硬编码的数据库凭证
+- 保持现有功能完全正常工作
 
 ### Out of Scope
 
@@ -98,11 +79,12 @@ Vue 3 + Element Plus 管理后台系统，前端使用夏日海滩风主题（�
 | 移除暗色模式 | 用户反馈不需要，简化复杂度 | ✓ Good |
 | 海洋蓝渐变侧边栏 | 形成视觉焦点，区分导航区 | ✓ Good |
 | 沙滩色悬停效果 | 呼应海滩主题，增强交互反馈 | ✓ Good |
-| Gradle 9.4 + JDK 26 | Gradle 9.4 原生支持 JDK 26，Spring Boot 4.1 兼容 | 2026-04-29 |
+| Gradle 9.5 + JDK 26 | Gradle 9.5 原生支持 JDK 26，Spring Boot 4.1 兼容 | 2026-04-29 |
 | Spring Boot 4.1.0-RC1 | 最新 RC 版本，依赖升级目标 | 2026-04-29 |
 | Spring Boot Gradle Plugin 4.1.0-RC1 | 与 Spring Boot 4.1.0-RC1 版本对齐 | 2026-04-29 |
-| Groovy DSL | 简洁直观，迁移自 Maven POM | 2026-04-29 |
+| Kotlin DSL | 类型安全，IDE 支持好 | 2026-04-29 |
 | 依赖全面升级 | MyBatis-Plus/Flyway/RocketMQ/Redisson 等升级到最新兼容版 | 2026-04-29 |
+| -Dfile.encoding=GBK | 修复中文路径下 Gradle 测试 ClassNotFoundException | 2026-05-06 |
 
 ## Evolution
 
@@ -122,4 +104,4 @@ This document evolves at phase transitions and milestone boundaries.
 4. Update Context with current state
 
 ---
-*Last updated: 2026-04-29 after v1.4 scope expanded (Maven→Gradle + SB 4.1.0-RC1 upgrade + dependency upgrades)*
+*Last updated: 2026-05-06 after v1.4 completed, v1.5 initialized*
